Stopped bckgrnd img from stretching

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 .Background_Image {
     background-image: url("pexels-alexander-grey-1428171.jpg");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
+    /* background-size: 100% 100%; */
     height: 80vh;
     width: 100%;
     }
